# bookley-key-trainer

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md
assets/: bookley-key-trainer.desktop  bookley.desktop
assets/plugin/novelist/.claude-plugin/: plugin.json
assets/plugin/novelist/skills/write-chapter/: SKILL.md
docs/: DECISIONS.md  INITIAL_DESIGN.md  PLAN.md
src/: lib.rs  main.rs  smoke.rs
src/core/: claude_auth.rs  config.rs  keys.rs  metrics.rs  mod.rs  normalize.rs  paths.rs  session.rs  sound.rs  stats_store.rs  text_source.rs  wordlist.rs
src/core/book/: agent.rs  cover.rs  craft.md  export.rs  mod.rs  prompt.rs  store.rs
src/ui/: app.rs  books.rs  connect.rs  keyboard.rs  mod.rs  results.rs  settings.rs  stage.rs  theme.rs
tests/: fake_claude.sh  fake_claude_paths.rs
