[package]
name = "bookley"
version = "0.1.0"
edition = "2021"
description = "Bookley Key Trainer: a typing-speed trainer that writes a novel as you practice"
license = "MIT"
default-run = "bookley"

[[bin]]
name = "bookley"
path = "src/main.rs"

[[bin]]
name = "gen-icons"
path = "src/bin/gen_icons.rs"

[dependencies]
# Keep default features (wayland + x11 + wgpu) and add glow for a documented GPU fallback.
eframe = { version = "=0.35.0", features = ["glow"] }
egui = "=0.35.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
toml = "=1.1.2"
directories = "=6.0.0"
clap = { version = "=4.6.1", features = ["derive"] }
rand = "=0.10.2"
pulldown-cmark = { version = "=0.13.4", default-features = false }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
image = { version = "=0.25.9", default-features = false, features = ["png"] }
resvg = "=0.47.0"

# PDF export: Typst engine embedded in-process with bundled fonts, plus the PDF backend.
typst-as-lib = { version = "=0.16.0", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst = "=0.15.0"
typst-pdf = "=0.15.0"
portable-pty = "=0.9.0"
unicode-normalization = "=0.1.25"

[profile.release]
opt-level = 2

# Keep the icon generator's heavy transitive builds out of the release path where possible;
# resvg is shared with runtime window-icon rendering so it stays a normal dependency.
